--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,5 @@
 [deps]
 GLFW = "f7f18e0c-5ee9-5ccd-a5bf-e8befd85ed98"
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 ModernGL = "66fc600b-dfda-50eb-8b99-91cfa97b1301"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
